don't specify a strategy to get the data in the branch the first time

--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -24,6 +24,6 @@ jobs:
           git add .
           git commit -m "Update data"
           git checkout -b data
-          git cherry-pick ${{ env.CURRENT_BRANCH}} --strategy=theirs
+          git cherry-pick ${{ env.CURRENT_BRANCH}}
           git push -u origin HEAD
 
