--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -23,6 +23,7 @@ jobs:
           git config --global user.email 'atlantis-green@users.noreply.github.com'
           git add .
           git commit -m "Update data"
+          git cherry-pick ${{ env.CURRENT_BRANCH}}
           git checkout -b data
           git push -u origin HEAD
 
