--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -24,7 +24,7 @@ jobs:
           git add .
           git stash
           git checkout -b data
-          rm data/*
+          rm /data/*
           git stash pop
           git add . 
           git commit -m "Update the data"
