--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -17,15 +17,17 @@ jobs:
       - name: set CURRENT_BRANCH
         run: echo "CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
       - name: commit files
-        working-directory: ./
+        working-directory: ./data
         run: |
           git config --global user.name 'atlantis-green'
           git config --global user.email 'atlantis-green@users.noreply.github.com'
+          git status
+          ls -l
           git add .
           git stash
           git checkout -b data
-          ls
-          rm /data/*
+          ls -l
+          rm * -r
           git stash pop
           git add . 
           git commit -m "Update the data"
