--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -25,7 +25,7 @@ jobs:
           ls -l
           git add .
           git stash
-          git checkout -b data
+          git checkout data
           ls -l
           rm * -r
           git stash pop
