stashing wants to delete the directory since it doesn't exist --- avoid that problem

--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -17,16 +17,15 @@ jobs:
       - name: set CURRENT_BRANCH
         run: echo "CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
       - name: commit files
-        working-directory: ./data
+        working-directory: ./
         run: |
           git config --global user.name 'atlantis-green'
           git config --global user.email 'atlantis-green@users.noreply.github.com'
           git status
-          ls -l
           git add .
           git stash
           git checkout data
-          ls -l
+          cd ./data
           rm * -r
           git stash pop
           git add . 
