--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -24,6 +24,7 @@ jobs:
           git status
           git add .
           git stash
+          git remote
           git checkout data
           cd ./data
           rm * -r
