--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -1,5 +1,6 @@
 name: createGeoJson
 on:
+  push:
   workflow_dispatch:
   schedule:
     - cron: '*/15 * * * *'
@@ -24,7 +25,7 @@ jobs:
           git status
           git add .
           git stash
-          git remote
+          git remote -v
           git checkout data
           cd ./data
           rm * -r
