--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -18,14 +18,14 @@ jobs:
       - name: set CURRENT_BRANCH
         run: echo "CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
       - name: commit files
-        working-directory: ./
-        shell: pwsh        
+        working-directory: ./     
         run: |
           git config --global user.name 'atlantis-green'
           git config --global user.email 'atlantis-green@users.noreply.github.com'
           git status
           git add .
           git stash
+          git fetch
           git branch
           git status
           git switch data
