--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -22,16 +22,13 @@ jobs:
         run: |
           git config --global user.name 'atlantis-green'
           git config --global user.email 'atlantis-green@users.noreply.github.com'
-          git status
           git add .
-          git stash
+          git commit -m "Update the data"
           git fetch
-          git branch
-          git status
           git switch data
           cd ./data
           rm * -r
-          git stash pop
+          git cherry-pick $ {{ env.CURRENT_BRANCH }} --strategy=ours
           git add . 
           git commit -m "Update the data"
           git push -u origin HEAD
