--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -48,13 +48,13 @@ jobs:
 #          jsons: /data/openFoodTrucks.json
       
       # now we move the files to s3
-      # - name: configure aws credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: east-us-2
-      # - name: deploy data to s3
-      #   run: aws s3 sync ./data/ s3://terraform-20220121192859548500000001
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: east-us-2
+      - name: deploy data to s3
+        run: aws s3 sync ./data/ s3://terraform-20220121192859548500000001
 
 
