use the secret we created for an environment variable

--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: east-us-2
+          aws-region: ${{ secrets.AWS_REGION }}
       - name: deploy data to s3
         run: aws s3 sync ./data/ s3://terraform-20220121192859548500000001
 
