create a secret for the s3 environment variable.

--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -55,6 +55,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: deploy data to s3
-        run: aws s3 sync ./data s3://terraform-20220121192859548500000001
+        run: aws s3 sync ./data s3://${{ secrets.S3_BUCKET }}
 
 
