--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -55,6 +55,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: deploy data to s3
-        run: aws s3 sync ./data s3://${{ secrets.S3_BUCKET }}
-
+        run: | 
+          aws s3 sync ./data s3://${{ secrets.S3_BUCKET }}
+          aws s3 sync ./src s3://${{ secrets.S3_BUCKET }}
 
