use workspace variable to find the html files we're looking for

--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -57,5 +57,5 @@ jobs:
       - name: deploy data to s3
         run: | 
           aws s3 sync ./data s3://${{ secrets.S3_BUCKET }}
-          aws s3 sync ./src s3://${{ secrets.S3_BUCKET }}
+          aws s3 sync $GITHUB_WORKSPACE/src s3://${{ secrets.S3_BUCKET }}
 
