--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -57,5 +57,7 @@ jobs:
       - name: deploy data to s3
         run: | 
           aws s3 sync ./data s3://${{ secrets.S3_BUCKET }}
+          cd $GITHUB_WORKSPACE
+          ls
           aws s3 sync $GITHUB_WORKSPACE/src s3://${{ secrets.S3_BUCKET }}
 
