need to switch back from the data branch to the branch where we're running

--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -57,7 +57,6 @@ jobs:
       - name: deploy data to s3
         run: | 
           aws s3 sync ./data s3://${{ secrets.S3_BUCKET }}
-          cd $GITHUB_WORKSPACE
-          ls
-          aws s3 sync $GITHUB_WORKSPACE/src s3://${{ secrets.S3_BUCKET }}
+          git switch ${{ env.CURRENT_BRANCH }}
+          aws s3 sync ./src s3://${{ secrets.S3_BUCKET }}
 
