--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -41,9 +41,11 @@ jobs:
           rm * -r
           git cherry-pick ${{ env.COMMIT_HASH  }} --strategy-option=theirs
           git push -u origin HEAD
-      - name: download the geojson schema
-        run: curl https://geojson.org/schema/GeoJSON.json --output ./GeoJSON.json
+          git checkout ${{ env.COMMIT_HASH }}
+
 # commented out -- more details in #11 -- https://github.com/marknooch/foodtrucks/issues/11
+#      - name: download the geojson schema
+#        run: curl https://geojson.org/schema/GeoJSON.json --output ./GeoJSON.json
 #      - name: confirm we produced valid GeoJSON
 #        uses: nhalstead/validate-json-action@0.1.3
 #        with:
@@ -60,7 +62,6 @@ jobs:
       - name: deploy data to s3
         run: | 
           aws s3 sync ./data s3://${{ secrets.S3_BUCKET }} --expires "$(date -d '+15 minutes' --utc +'%Y-%m-%dT%H:%M:%SZ')"
-          git checkout ${{ env.COMMIT_HASH }}
           aws s3 sync ./src s3://${{ secrets.S3_BUCKET }}
       - name: invalidate cache on every completed pull request
         if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
