linewrap the bash

--- a/.github/workflows/createGeoJson.yaml
+++ b/.github/workflows/createGeoJson.yaml
@@ -66,5 +66,7 @@ jobs:
       - name: invalidate cache on every completed pull request
         if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
         run: |
-          aws cloudfront list-distributions | jq -r '.DistributionList.Items[].Id' | while read id ; do aws cloudfront create-invalidation --distribution-id $id --paths "/*" ; done
+          aws cloudfront list-distributions | \
+          jq -r '.DistributionList.Items[].Id' | \
+          while read id ; do aws cloudfront create-invalidation --distribution-id $id --paths "/*" ; done
 
